@@ -6,6 +6,7 @@ mEditorCtrl.py mDirBrowser.py DireBrowser.py
                     Add tool button snippet and modify open dirbrowser and snippet as check toolbutton
                     Change `explorer.exe %s` as `explorer.exe /e, %s`
 ruler/__init__.py   Fix ruler bug
+DirBrowser.py       When add path, it'll automatically pop up project setting dialog
                     
 [2008/04/12]
 mLexer.py mLexerClass1.py
